--- a/style.css
+++ b/style.css
@@ -12,11 +12,23 @@ h1 {
     font-size: 40px;
 }
 
-ul {
-    list-style: none;
-    font-size: 30px;
-}
-
 a {
     text-decoration: none;
+}
+
+h3 {
+    font-size: 40px;
+    padding-top: 20px;
+}
+
+div {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}   
+
+#head {
+    text-align: center;
 }
